Fixed button visibility for screens wider than 50Opx

--- a/src/component/style.css
+++ b/src/component/style.css
@@ -3686,6 +3686,7 @@ Author:         Ingenious_team
     }
 
     .foot-menu ul {
+        display: grid;
         padding-bottom: 18px;
     }
 
